--- a/platforms/android/include.gradle
+++ b/platforms/android/include.gradle
@@ -8,5 +8,5 @@ android {
 }
 
 dependencies {
-    compile 'io.intercom.android:intercom-sdk-base:3.+'
+    implementation 'io.intercom.android:intercom-sdk-base:5.+'
 }
